--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,10 @@
   h4 {
     @apply font-headings;
   }
+
+  a {
+    @apply underline underline-offset-2 hover:text-green-600;
+  }
 }
 
 @layer components {
