remove underlines from ui links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,15 +13,15 @@ const { pathname } = Astro.canonicalURL;
   <nav>
     <a href="/"
       class={
-      `inline-block mx-4 ${pathname === '/' ? 'font-bold' : 'text-gray-400'}`
+      `no-underline inline-block mx-4 ${pathname === '/' ? 'font-bold' : 'text-gray-400'}`
       }>About</a>
     <a href="/blog/"
       class={
-      `inline-block mx-4 ${pathname.includes('/blog/') ? 'font-bold' : 'text-gray-400'}`
+      `no-underline inline-block mx-4 ${pathname.includes('/blog/') ? 'font-bold' : 'text-gray-400'}`
       }>Blog</a>
     <a href="/uses/"
       class={
-      `inline-block mx-4 ${pathname.includes('/uses') ? 'font-bold' : 'text-gray-400'}`
+      `no-underline inline-block mx-4 ${pathname.includes('/uses') ? 'font-bold' : 'text-gray-400'}`
       }
     >Uses</a>
   </nav>
