adjust homepage layout

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,8 +3,8 @@ const { pathname } = Astro.canonicalURL;
 
 ---
 <header class="container mx-auto flex justify-between items-center">
-  <a href="/" class="inline-block w-20 h-20">
-    <svg class="w-20 h-20" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <a href="/" class="inline-block w-12 h-12 md:w-20 md:h-20">
+    <svg class="w-12 h-12 md:w-20 md:h-20" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
       <rect width="50" height="50" fill="black"/>
       <path d="M36.1111 34.8006L25 15.5556L13.8889 34.8006H15.6885L21.9948 23.8777L28.3011 34.8006H36.1111Z" fill="white"/>
       </svg>
