--- a/src/components/PostItem.astro
+++ b/src/components/PostItem.astro
@@ -17,7 +17,7 @@ const { url, title, thumbnail, date, description } = Astro.props as Props;
     <img class="object-cover aspect-[3/2] w-full" src={thumbnail} alt={title} width="300" height="200">
     }
     {!thumbnail &&
-    <div class="border w-full h-28 max-h-48"></div>
+    <div class="border w-full h-28 max-h-48 text-sm flex justify-center items-center text-slate-300">no thumbnail</div>
     }
     <div class="font-bold font-headings leading-tight mt-[1em]">{title}</div>
   </a>
