--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -9,7 +9,7 @@ const { title, description, thumbnail } = Astro.props as Props;
 const canonicalURL = Astro.canonicalURL;
 const defaultDescription = `I'm Armno - a Thai frontend developer at buzzwoo. Based in Chiang Mai. I write about what I've learned.`;
 ---
-<title>{ title } - armno.in.th</title>
+<title>{ title }</title>
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
