--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,4 +44,18 @@
   .footnotes {
     @apply text-sm;
   }
+
+  .main {
+    display: grid;
+    grid-template-columns: minmax(1.5rem, 1fr) min(65ch, calc(100% - 3rem)) minmax(1.5rem, 1fr);
+    max-width: 1280px;
+  }
+
+  .main > * {
+    grid-column: 2;
+  }
+
+  .full-bleed {
+    grid-column: 1 / -1;
+  }
 }
