--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -27,18 +27,18 @@ export async function getStaticPaths({ paginate, rss }) {
 
 const { page } = Astro.props;
 const content = {
-  title: 'Blog'
+  title: 'Blog - armno.in.th'
 }
 ---
 
 <PageLayout {content} notProse={true}>
-  <div class="flex items-baseline mb-8 container mx-auto">
+  <div class="flex items-baseline mb-8 container mx-auto px-6 md:px-0">
     <h1 class="text-5xl font-bold">Blog</h1>
     <span class="text-2xl text-slate-300 mx-4">/</span>
     <span class="text-2xl text-slate-300">Page {page.currentPage} of {page.lastPage}</span>
   </div>
 
-  <ol class="list-none p-0 lg:p-0 not-prose grid gap-12 md:grid-cols-2 lg:grid-cols-3 lg:gap-x-20 lg:gap-y-32 container mx-auto">
+  <ol class="list-none px-6 md:p-0 not-prose grid container mx-auto grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-x-12 gap-y-16">
     {page.data.map(post => (
       <li class="text-3xl">
         <PostItem
