--- a/src/components/RelatedPosts.astro
+++ b/src/components/RelatedPosts.astro
@@ -1,26 +1,24 @@
 ---
 import { Frontmatter } from '@shared/frontmatter.interface';
-import { intersection } from 'lodash-es';
+import { intersection, sampleSize } from 'lodash-es';
 import PostItem from '@components/PostItem.astro';
 
 const allPosts = await Astro.glob<Frontmatter>('../pages/blog/**/*.md');
 const { tags, currentPathname } = Astro.props;
 
-const relatedPosts = allPosts.filter(({ url }) => !currentPathname.includes(url))
+const allRelatedPosts = allPosts.filter(({ url }) => !currentPathname.includes(url))
   // sort posts by most recent first
   .sort((a, b) => new Date(b.frontmatter.date).valueOf() - new Date(a.frontmatter.date).valueOf())
   // filter to posts with only matched tags with the current post
   .filter(post => {
     const matchedTags = intersection(tags, post.frontmatter.tags);
     return matchedTags.length > 0;
-  })
-  // select only 3 posts to display
-  .slice(0, 3);
+  });
 
-// TODO: display random posts if there is no related posts
+const relatedPosts = sampleSize(allRelatedPosts, 3, null);
 ---
 
-{relatedPosts.length > 0 && 
+{relatedPosts.length > 0 &&
 <section class="mt-20 not-prose">
   <h4 class="text-sm text-slate-600 uppercase tracking-widest font-bold mb-4">Related posts</h4>
   <ul class="grid grid-cols-3 gap-x-8">
