--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,17 +1,21 @@
 ---
-const { pathname } = Astro.canonicalURL;
+const { pathname } = Astro.url;
 ---
+
 <footer class="pt-20 pb-20 text-sm mx-auto text-center">
   <hr class="mx-auto max-w-xs mb-12 border-0 h-1 bg-slate-700">
   {pathname !== '/' &&
   <p class="mb-12 text-slate-600">
     Got some feedback? Feel free to drop a comment via
-    <a href="https://github.com/armno/armno.in.th/issues" target="_blank"
-     class="underline hover:text-green-500">GitHub Issues</a>.
+    <a href="https://github.com/armno/armno.in.th/issues" target="_blank" class="underline hover:text-green-500">GitHub
+      Issues</a>.
   </p>
   }
   <div class="text-slate-600">&copy; 2007&hyphen;now Armno Prommarak. All Rights Reserved.</div>
 
-  <div class=" text-slate-600">Made in <a href="https://www.openstreetmap.org/search?query=chiang%20mai#map=16/18.7880/98.9859" target="_blank" rel="nofollow noreferrer">Chiang Mai, Thailand</a>.
-  <a href="/rss.xml">RSS</a>.</div>
+  <div class=" text-slate-600">Made in <a
+      href="https://www.openstreetmap.org/search?query=chiang%20mai#map=16/18.7880/98.9859" target="_blank"
+      rel="nofollow noreferrer">Chiang Mai, Thailand</a>.
+    <a href="/rss.xml">RSS</a>.
+  </div>
 </footer>
