--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,28 +1,23 @@
 ---
-const { pathname } = Astro.canonicalURL;
+const { pathname } = Astro.url;
 
 ---
+
 <header class="container mx-auto grid grid-flow-col grid-cols-[1fr] items-center">
   <a href="/" class="inline-block w-12 h-12 md:w-20 md:h-20">
-    <svg class="w-12 h-12 md:w-20 md:h-20" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <rect width="50" height="50" fill="black"/>
-      <path d="M36.1111 34.8006L25 15.5556L13.8889 34.8006H15.6885L21.9948 23.8777L28.3011 34.8006H36.1111Z" fill="white"/>
-      </svg>
+    <svg class="w-12 h-12 md:w-20 md:h-20" width="50" height="50" viewBox="0 0 50 50" fill="none"
+      xmlns="http://www.w3.org/2000/svg">
+      <rect width="50" height="50" fill="black" />
+      <path d="M36.1111 34.8006L25 15.5556L13.8889 34.8006H15.6885L21.9948 23.8777L28.3011 34.8006H36.1111Z"
+        fill="white" />
+    </svg>
   </a>
 
   <nav>
-    <a href="/"
-      class={
-      `no-underline inline-block mx-4 ${pathname === '/' ? 'font-bold' : 'text-gray-400'}`
-      }>About</a>
-    <a href="/blog/"
-      class={
-      `no-underline inline-block mx-4 ${pathname.includes('/blog/') ? 'font-bold' : 'text-gray-400'}`
-      }>Blog</a>
-    <a href="/uses/"
-      class={
-      `no-underline inline-block mx-4 ${pathname.includes('/uses') ? 'font-bold' : 'text-gray-400'}`
-      }
-    >Uses</a>
+    <a href="/" class={ `no-underline inline-block mx-4 ${pathname==='/' ? 'font-bold' : 'text-gray-400' }` }>About</a>
+    <a href="/blog/" class={ `no-underline inline-block mx-4 ${pathname.includes('/blog/') ? 'font-bold'
+      : 'text-gray-400' }` }>Blog</a>
+    <a href="/uses/" class={ `no-underline inline-block mx-4 ${pathname.includes('/uses') ? 'font-bold'
+      : 'text-gray-400' }` }>Uses</a>
   </nav>
 </header>
