--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
 
         <p>
           You can find what I&rsquo;m doing on <a href="https://github.com/armno">GitHub</a>,
-          or check out my <a href="/post">blog</a> to see what I&rsquo;ve learned recently.
+          or check out my <a href="/blog">blog</a> to see what I&rsquo;ve learned recently.
         </p>
 
         <h3>Get in touch</h3>
