--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,8 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
 		<Header />
 		<main class="lg:grid lg:grid-cols-3 lg:gap-8 lg:max-w-6xl lg:mx-auto">
       <div class="mt-12 lg:pt-16">
-        <Picture src="/images/anb.jpg" alt="Armno Prommarak's photo" />
+        <Picture src="/images/anb.jpg" alt="Armno Prommarak's photo" extraClass="max-h-[300px]"
+          width="300" height="300" />
       </div>
 
       <div class="px-6 mt-12 lg:pt-12 lg:col-span-2 mx-auto prose prose-slate leading-relaxed">
