update home page and footer content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,22 +33,27 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
           I&rsquo;m currently leading the frontend team at buzzwoo where my focus is on JavaScript, Angular, and frontend performance.
         </p>
 
-        <p>In my free time, I enjoy reading books, taking photos, <a href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/">building mechanical keyboards</a> and cycling with my <a href="https://www.strava.com/athletes/3637623">road bike</a>.</p>
+        <p>Besides work, I enjoy reading books, taking photos, <a href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/">building mechanical keyboards</a> and cycling with my <a href="https://www.strava.com/athletes/3637623">road bike</a>.</p>
 
         <p>
           You can find what I&rsquo;m doing on <a href="https://github.com/armno">GitHub</a>,
           or check out my <a href="/blog">blog</a> to see what I&rsquo;ve learned recently.
+          I also write about life in my <a href="https://armno.cc/">personal</a> <a href="https://armno.wordpress.com">blogs</a> sometimes.
         </p>
 
         <h3>Get in touch</h3>
         <p>
-          If you want to contact me, or just want to say hi, you can send me an email at <a href="mailto:monkeyarmno@gmail.com">monkeyarmno@gmail.com</a>.
+          You can contact me via email at <a href="mailto:monkeyarmno@gmail.com">monkeyarmno@gmail.com</a>*.
         </p>
 
         <p>
-          Have a great day!
+          Have a nice day!
           <br>
           &ndash; Armno
+        </p>
+
+        <p class="leading-4">
+          <small>*I read all of the emails sent to me, but please keep in mind that I may or may not reply. Emails from recruiters or online marketers are usually ignored.</small>
         </p>
       </div>
     </main>
