--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,16 +6,17 @@ const { pathname } = Astro.url;
   <hr class="mx-auto max-w-xs mb-12 border-0 h-1 bg-slate-700">
   {pathname !== '/' &&
   <p class="mb-12 text-slate-600">
-    Got some feedback? Feel free to drop a comment via
-    <a href="https://github.com/armno/armno.in.th/issues" target="_blank" class="underline hover:text-green-500">GitHub
-      Issues</a>.
+    Thanks for reading!
   </p>
   }
-  <div class="text-slate-600">&copy; 2007&hyphen;now Armno Prommarak. All Rights Reserved.</div>
+  <div class="text-slate-600 tracking-wide">Made in <a
+    href="https://www.openstreetmap.org/search?query=chiang%20mai#map=16/18.7880/98.9859" target="_blank"
+    rel="nofollow noreferrer">Chiang Mai, Thailand</a>
+    <br>&copy; 2007&hyphen;now Armno Prommarak. All Rights Reserved.</div>
 
-  <div class=" text-slate-600">Made in <a
-      href="https://www.openstreetmap.org/search?query=chiang%20mai#map=16/18.7880/98.9859" target="_blank"
-      rel="nofollow noreferrer">Chiang Mai, Thailand</a>.
-    <a href="/rss.xml">RSS</a>.
+  <div class=" text-slate-600 tracking-wide mt-4">
+    
+      <a href="https://armno.in.th/">armno.in.th</a> &middot;
+      <a href="https://armno.cc/">armno.cc</a>
   </div>
 </footer>
