--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
         </p>
 
         <p class="leading-4">
-          <small>*I read all of the emails sent to me, but please keep in mind that I may or may not reply. Emails from recruiters or online marketers are usually ignored.</small>
+          <small>*I might or might not reply to your email. Emails from recruiters or online marketers are usually ignored.</small>
         </p>
       </div>
     </main>
