--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,37 +24,37 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
       </div>
 
       <div class="px-6 mt-12 lg:pt-12 lg:col-span-2 mx-auto prose prose-slate leading-relaxed">
-        <div class="text-gray-400 uppercase font-semibold tracking-wider text-sm">Hi there 👋</div>
+        <div class="font-semibold tracking-wider text-sm">Hi :wave:</div>
         <h1 class="text-2xl lg:text-3xl font-light">My name is <strong class="font-semibold">Armno Prommarak</strong>.<br>
           I&rsquo;m a frontend developer at <a href="https://buzzwoo.de" target="_blank">buzzwoo</a>.</h1>
 
         <p class="mt-20 lg:mt-12">
           <strong>I build user interfaces to deliver good user experiences on the web.</strong><br>
-          I&rsquo;m currently leading the frontend team at buzzwoo where my focus is on JavaScript, Angular, and frontend performance.
-        </p>
-
-        <p>Besides work, I enjoy reading books, taking photos, <a href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/">building mechanical keyboards</a> and cycling with my <a href="https://www.strava.com/athletes/3637623">road bike</a>.</p>
-
+          </p>
         <p>
-          You can find what I&rsquo;m doing on <a href="https://github.com/armno">GitHub</a>,
-          or check out my <a href="/blog">blog</a> to see what I&rsquo;ve learned recently.
+          I&rsquo;m currently a frontend teamlead at buzzwoo, where my focus is supporting my colleagues to get better on JavaScript frameworks and frontend performance.
+        <p>
+          Besides work, I'm a big nerd. I enjoy reading books, digital photography, <a href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/">building mechanical keyboards</a> and cycling with my <a href="https://www.strava.com/athletes/3637623">road bike</a>.</p>
+
+          Check out my <a href="/blog">blog</a> to see what I&rsquo;ve learned recently.
           I also write about life in my <a href="https://armno.cc/">personal</a> <a href="https://armno.wordpress.com">blogs</a> sometimes.
         </p>
 
         <h3>Get in touch</h3>
         <p>
-          You can contact me via email at <a href="mailto:monkeyarmno@gmail.com">monkeyarmno@gmail.com</a>*.
-        </p>
-
-        <p>
-          Have a nice day!
-          <br>
-          &ndash; Armno
+          You can find me on <a href="https://github.com/armno">GitHub</a>. Otherwise, you can also contact me via email at <a href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a>*. (I know, strange email address.)
         </p>
 
         <p class="leading-4">
           <small>*I might or might not reply to your email. Emails from recruiters or online marketers are usually ignored.</small>
         </p>
+
+        <p>
+          I'm having a good day. Hope you have a nice one too!
+          <br>
+          &ndash; Armno
+        </p>
+
       </div>
     </main>
 
