upgrade to astro 2. seems nothing breaks. ship it 🚀

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
         <p>
           I&rsquo;m currently a frontend teamlead at buzzwoo, where my focus is supporting my colleagues to get better on JavaScript frameworks and frontend performance.
         <p>
-          Besides work, I'm a big nerd. I enjoy reading books, digital photography, <a href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/">building mechanical keyboards</a> and cycling with my <a href="https://www.strava.com/athletes/3637623">road bike</a>.</p>
+          Besides work, I'm a big nerd. I enjoy reading books, taking photos, <a href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/">building mechanical keyboards</a> and cycling with my <a href="https://www.strava.com/athletes/3637623">road bike</a>.</p>
 
           Check out my <a href="/blog">blog</a> to see what I&rsquo;ve learned recently.
           I also write about life in my <a href="https://armno.cc/">personal</a> <a href="https://armno.wordpress.com">blogs</a> sometimes.
