update homepage content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,17 +32,17 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
           <strong>I build user interfaces to deliver good user experiences on the web.</strong><br>
           </p>
         <p>
-          I&rsquo;m currently a frontend teamlead at buzzwoo, where my focus is supporting my colleagues to get better on JavaScript frameworks and frontend performance.
+          I&rsquo;m currently a frontend teamlead at buzzwoo. My main focus is supporting my colleagues to get better on JavaScript frameworks and frontend performance.
         <p>
           Besides work, I'm a big nerd. I enjoy reading books, taking photos, <a href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/">building mechanical keyboards</a> and cycling with my <a href="https://www.strava.com/athletes/3637623">road bike</a>.</p>
 
           Check out my <a href="/blog">blog</a> to see what I&rsquo;ve learned recently.
-          I also write about life in my <a href="https://armno.cc/">personal</a> <a href="https://armno.wordpress.com">blogs</a> sometimes.
+          I also write about life in my <a href="https://armno.cc/">personal</a> <a href="https://armno.wordpress.com">blogs</a>.
         </p>
 
         <h3>Get in touch</h3>
         <p>
-          You can find me on <a href="https://github.com/armno">GitHub</a>. Otherwise, you can also contact me via email at <a href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a>*. (I know, strange email address.)
+          You can find me on <a href="https://github.com/armno">GitHub</a>. Otherwise, you can also contact me via email at <a href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a>*.
         </p>
 
         <p class="leading-4">
@@ -50,7 +50,7 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
         </p>
 
         <p>
-          I'm having a good day. Hope you have a nice one too!
+          Nice to meet you!
           <br>
           &ndash; Armno
         </p>
