fix errors from astro check command"

--- a/src/components/RelatedPosts.astro
+++ b/src/components/RelatedPosts.astro
@@ -20,7 +20,7 @@ const allRelatedPosts = allPosts
     return matchedTags.length > 0;
   });
 
-const relatedPosts = sampleSize(allRelatedPosts, 3, null);
+const relatedPosts = sampleSize(allRelatedPosts, 3);
 ---
 
 {
