adjust post list layout

--- a/src/components/GlobalStyle.astro
+++ b/src/components/GlobalStyle.astro
@@ -46,7 +46,7 @@
   .main {
     display: grid;
     grid-template-columns: minmax(1.5rem, 1fr) min(65ch, calc(100% - 3rem)) minmax(1.5rem, 1fr);
-    max-width: 1280px;
+    @apply max-w-5xl;
   }
 
   .main > * {
