--- a/src/components/RelatedPosts.astro
+++ b/src/components/RelatedPosts.astro
@@ -36,6 +36,7 @@ const relatedPosts = sampleSize(allRelatedPosts, 3);
             pubDate={post.frontmatter.pubDate}
             title={post.frontmatter.title}
             thumbnail={post.frontmatter.thumbnail}
+            isRelatedPost={true}
           />
         ))}
       </ul>
