--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -17,9 +17,9 @@ const content = {
 };
 ---
 
-<PageLayout {content} notProse={true}>
+<PageLayout {content}>
   <div class="flex items-baseline mb-8 container mx-auto px-6 md:px-0">
-    <h1 class="text-5xl font-bold">Blog</h1>
+    <h1 class="text-5xl font-bold mb-0">Blog</h1>
     <span class="text-2xl text-slate-300 mx-4">/</span>
     <span class="text-2xl text-slate-300"
       >Page {page.currentPage} of {page.lastPage}
@@ -30,14 +30,15 @@ const content = {
     class="list-none px-6 md:p-0 not-prose grid container mx-auto grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-x-12 gap-y-16 lg:gap-x-16 lg:gap-y-24"
   >
     {
-      page.data.map((post) => (
-        <li class="text-3xl">
+      page.data.map((post, index) => (
+        <li>
           <PostItem
             title={post.frontmatter.title}
             url={post.url}
             thumbnail={post.frontmatter.thumbnail}
             pubDate={post.frontmatter.pubDate}
             description={post.frontmatter.description}
+            isLatest={index === 0}
           />
         </li>
       ))
