tweak post layout's header

--- a/src/components/PostItem.astro
+++ b/src/components/PostItem.astro
@@ -30,7 +30,7 @@ const { url, title, thumbnail, pubDate, description, isLatest, isRelatedPost } =
   </a>
   {pubDate &&
   <time class="text-xs text-slate-600" datetime={pubDate.toString()}>
-    {format(new Date(pubDate), 'PPP')}
+    {format(new Date(pubDate), 'd MMM yyyy')}
   </time>
   }
   {description && isLatest &&
