--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -4,13 +4,29 @@ import RelatedPosts from '@components/RelatedPosts.astro';
 import PageLayout from './PageLayout.astro';
 
 const { content } = Astro.props;
-const { title, pubDate } = content;
+const { title, pubDate, thumbnail, tags, categories } = content;
 const canonicalURL = Astro.url;
 ---
 
 <PageLayout { content } isPost={true}>
-  <h1 class="text-4xl lg:text-5xl leading-tight lg:leading-tight">{title}</h1>
-  <PublishedDate {pubDate} />
+  <div slot="post-header" class="lg:col-span-full grid grid-cols-1 lg:grid-cols-2 gap-8 lg:mb-20">
+    <div class="order-2 lg:order-1 lg:col-start-1 lg:col-end-2 mb-10 lg:mb-0">
+      <a href={thumbnail}>
+        <img src={thumbnail} alt={title} class="w-full lg:w-4/5 mx-auto my-0 rounded-3xl">
+      </a>
+    </div>
+    <div class="order-1 lg:order-2 lg:col-start-2 lg:col-end-3 lg:flex lg:flex-col lg:justify-center lg:gap-3">
+      <!-- <div>
+      { 
+        categories.map(tag => (
+          <span class="font-mono text-sm inline-block mr-2">#{ tag }</span>
+        ))
+      }
+      </div> -->
+      <h1 class="text-2xl lg:text-3xl leading-tight mb-0 max-w-[80%]">{title}</h1>
+      <PublishedDate {pubDate} />
+    </div>
+  </div>
   <slot />
-  <RelatedPosts tags={content.tags} currentPathname={canonicalURL.pathname} />
+  <RelatedPosts tags={tags} currentPathname={canonicalURL.pathname} />
 </PageLayout>
