--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -7,7 +7,7 @@ import GlobalStyle from '@components/GlobalStyle.astro';
 const { content, isPost } = Astro.props;
 const { title, description, thumbnail, language } = content;
 
-const classes = 'mt-20 mx-auto pb-24 prose prose-slate leading-relaxed main';
+const classes = 'mt-20 mx-auto pb-24 prose prose-slate main';
 ---
 <html lang={language ? language : 'th'}>
 	<head>
