--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -2,13 +2,14 @@
 import PageLayout from "@layouts/PageLayout.astro";
 import Pagination from "@components/Pagination.astro";
 import PostItem from "@components/PostItem.astro";
+import WarningMessage from "@components/WarningMessage.astro";
 import { Frontmatter } from "@shared/frontmatter.interface";
 import { sortBy } from "lodash-es";
 
-export async function getStaticPaths({ paginate, rss }) {
+export async function getStaticPaths({ paginate }) {
   let allPosts = await Astro.glob<Frontmatter>("./**/*.mdx");
   allPosts = sortBy(allPosts, ["frontmatter.pubDate"]).reverse();
-  return paginate(allPosts, { pageSize: 12 });
+  return paginate(allPosts, { pageSize: 50 });
 }
 
 const { page } = Astro.props;
@@ -18,7 +19,12 @@ const content = {
 ---
 
 <PageLayout {content}>
-  <div class="flex items-baseline mb-8 container mx-auto px-6 md:px-0">
+  <WarningMessage>
+    <p>
+      Blog listing page is still a work-in-progress.
+    </p>
+  </WarningMessage>
+  <div class="flex items-baseline mb-8 container mx-auto px-6 md:px-0 mt-6">
     <h1 class="text-5xl font-bold mb-0">Blog</h1>
     <span class="text-2xl text-slate-300 mx-4">/</span>
     <span class="text-2xl text-slate-300"
@@ -27,7 +33,7 @@ const content = {
   </div>
 
   <ol
-    class="list-none px-6 md:p-0 not-prose grid container mx-auto grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-x-12 gap-y-16 lg:gap-x-16 lg:gap-y-24"
+    class="list-none px-6 md:p-0 not-prose grid container mx-auto grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-x-12 gap-y-12 lg:gap-x-16 lg:gap-y-16"
   >
     {
       page.data.map((post, index) => (
@@ -40,6 +46,7 @@ const content = {
             description={post.frontmatter.description}
             isLatest={index === 0}
           />
+          <hr class="w-1/2 mx-auto mt-12">
         </li>
       ))
     }
